Fix horizontal overflow problem in home page

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -3,7 +3,6 @@
     grid-template-columns: 1fr;
     grid-template-rows: 60px 1fr;
 
-    width: 100vw;
     height: 100vh;
 }
 
@@ -15,8 +14,10 @@
 
     display: grid;
 
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr;
+
+    min-height: calc(100vh - 60px);
 }
 
 .posts-area{
